css/style.css
/* IMPORT RESET */
@import url("reset.css");

/* IMPORT 12 COLUMN RESPONSIVE GS */
@import url("responsive.gs.12col.css");

html, body {
  height: 100%;
	padding: 0;
	margin: 0;
	border: 0;
}

/*	EXAMPLE STYLES */
body {
	font-family: adelle, serif;
	font-weight: 200;
	color: black;
	font-size: 20px;
}

body.is_yellow {
  background: #F3D407;
  color: black;
}

body strong {
  font-weight: 600;
}

body a {
  color: inherit;
}

body a:hover {
  color: #c00000;
}

body a:visited {
  color: #534701;
}

body a.strong {
  font-weight: 600;
}

header {
	text-align: center;
}

.left_aligned_headers header {
  text-align: left;
}

header h1 {
	font-size: 2.1em;
  font-family: jaf-bernino-sans-condensed, sans-serif;
  font-weight: 800;
	text-align: inherit;
	margin-top: 1em;
	margin-bottom: 0.2em;
}

header h2 {
	font-size: 1.9em;
	font-family: adelle, serif;
	text-align: inherit;
	font-weight: 300;
  font-style: italic;
	margin-bottom: 1em;
}

article h2.date {
  background: #F3D407;
  display: inline-block;
  margin-top: 1em;
  padding: 8px;
  font-size: 1.2em;
}

article h2.post_title {
  margin-top: 1em;
  font-size: 1.4em;
}

article h3.author {
  font-size: 1em;
  font-weight: 600;
}

article.post h3 {
  font-size: 1.2em;
  font-weight: 800;
  margin-top: 1em;
  margin-bottom: 1em;
}

article.post hr.end_post {
  margin-top: 2em;
  margin-bottom: 2em;
}

img.post_header_image {
  max-width: 100%;
}

hr {
	width: 150px;
	border: 0;
	height: 2px;
	color: #000;
	background-color: #000;
}

.the-very-top {
  background: black;
  height: 55px;
  border-top: 4px solid #F3D407;
  color: #F3D407;
}

.the-very-top img {
  margin-left: 71px;
  position: relative;
  top: 9px;
}

.the-very-top a {
  color: inherit;
  text-decoration: none;
  margin-left: 22px;
}

.the-very-top a:hover {
  color: white !important;
}

.the-very-top a:visited {
  color: inherit;
}

.the-very-top a.active {
  color: white;
}

article {
	line-height: 1.2em;
	text-align: center;
	padding-left: 5px;
	padding-right: 5px;
}

article p {
	margin-top: 1em;
  line-height: 1.6em;
}

article h2 {
  font-size: 1.6em;
  font-family: jaf-bernino-sans-condensed, sans-serif;
  font-weight: 800;
	text-align: inherit;
	margin-top: 2em;
	margin-bottom: 0.2em;
}

article a.new_block {
  color: #c00000;
  text-decoration: none;
  display: block;
  font-weight: 800;
  margin-top: 0.5em;
}

aside {
	line-height: 20em;
	text-align: center;
}

footer, .page-wrap:after {
	height: 288px;
}

footer.alt_footer, .page-wrap_alt_footer:after {
	height: 92px;
}

footer {
	text-align: center;
	position: relative;
}

footer hr {
	margin-bottom: 2em;
}

footer img {
	margin-bottom: 2em;
  margin-left: 8px;
  margin-right: 8px;
}

footer p {
	text-align: inherit;
	font-size: 0.8em;
}

footer.alt_footer {
  background: #F3D407;
  font-size: 0.6em;
}

footer.alt_footer a {
  text-decoration: none;
}

footer.alt_footer img {
  margin-left: 8px;
  margin-right: 8px;
  position: relative;
  top: 30px;
}

footer.alt_footer img:first-child {
  margin-left: 8px;
  margin-right: 16px;
  position: relative;
  top: 30px;
}

footer.alt_footer div.left_side {
  float: left;
  padding-left: 70px
}

footer.alt_footer div.right_side {
  float: right;
  padding-right: 70px
}

#parallax_wrap, #parallax_wrap_home {
	background: url(/images/main_pic.jpg) center center no-repeat;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
	height: 380px;
}

#parallax_inner, #parallax_inner_home {
	background: url(/images/spotlight_overlay2.png) center center no-repeat;
	-webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
	height: 380px;
}

#parallax_wrap, #parallax_inner {
  height: 266px;
}

#infotext {
	text-align: left;
	font-size: 1em;
}

.stronger {
	font-weight: 600;
}

.page-wrap {
	min-height: 100%;
  margin-bottom: -288px;
}

.page-wrap_alt_footer {
	min-height: 100%;
  margin-bottom: -92px;
}

.page-wrap:after {
  content: "";
  display: block;
}

#black_bottom_bar {
	width: 100%;
	height: 4px;
	position: absolute;
	bottom: 0;
	background: black;
	overflow: hidden;
}

.mc_embed_signup_alt {
  margin-left: 0 !important;
}

.mc_embed_signup_alt form {
  padding-left: 0 !important;
}

#mc_embed_signup_scroll {
	margin-top: 1em;
}

#mc_embed_signup_scroll .email {
	float: left;
	width: 73% !important;
  min-height: 56px;
	height: 56px;
  text-align: left;
  font-family: adelle, serif;
  font-size: 1em;
  font-style: italic;
  font-weight: 300;
  padding: 18px !important;
	border-radius: 0 !important;
	border: none;
	margin: 0 !important;
	border-width: 0;
}

.mc_embed_signup_scroll_alt .email {
  background: #efefef;
  color: #ccc;
}

#mc_embed_signup .button {
	font-family: jaf-bernino-sans-condensed, sans-serif;
  font-weight: 800;
	font-size: 1.1em !important;
	clear: none !important;
	min-height: 56px;
	height: 56px;
	width: 20% !important;
	border-radius: 0 !important;
	background: black !important;
	color: #f3d407 !important;
}

#mc_embed_signup .button:hover {
	color: white !important;
}

/* sizes without devices info */
@media only screen
and (max-width : 320px) {
	body {
		font-size: 18px;
	}
	header h1 {
		font-size: 1.6em;
		margin-top: 0.5em;
		line-height: 1em;
	}
	header h2 {
		font-size: 1.4em;
		margin-bottom: 0.5em;
	}
	#mc_embed_signup_scroll .email {
		padding: 10px !important;
		min-height: 40px;
		height: 40px;
		width: 68% !important;
	}
	#mc_embed_signup_scroll .button {
		padding: 10px !important;
		min-height: 40px;
		height: 40px;
		line-height: 10px !important;
		margin-bottom: 0 !important;
	}
  #parallax_wrap_home, #parallax_inner_home {
		height: 120px;
	}
  #parallax_wrap, #parallax_inner {
		height: 84px;
	}
	footer img {
		margin-bottom: 0.5em;
	}
  .the-very-top img {
    margin-left: 6px;
  }
}

@media only screen
and (min-width : 320px)
and (max-width : 480px) {
	body {
		font-size: 18px;
	}
	header h1 {
		font-size: 1.5em;
		line-height: 1em;
	}
	header h2 {
		font-size: 1.4em;
	}
	#mc_embed_signup_scroll .email {
		padding: 10px !important;
		min-height: 40px;
		height: 40px;
		width: 68% !important;
	}
	#mc_embed_signup_scroll .button {
		padding: 10px !important;
		min-height: 40px;
		height: 40px;
		line-height: 10px !important;
		margin-bottom: 0 !important;
		font-size: 0.9em !important;
	}
  #parallax_wrap_home, #parallax_inner_home {
		height: 120px;
	}
  #parallax_wrap, #parallax_inner {
		height: 84px;
	}
	footer img {
		margin-bottom: 0.5em;
	}
  .the-very-top img {
    margin-left: 6px;
  }
}

@media only screen
and (min-width : 480px)
and (max-width : 600px) {
	body {
		font-size: 18px;
	}
  #parallax_wrap_home, #parallax_inner_home {
		height: 180px;
	}
  #parallax_wrap, #parallax_inner {
		height: 126px;
	}
	footer img {
		margin-bottom: 0.5em;
	}
  .the-very-top img {
    margin-left: 6px;
  }
}



@media only screen
and (min-width : 600px)
and (max-width : 768px) {
	body {
		font-size: 18px;
	}
  #parallax_wrap_home, #parallax_inner_home {
		height: 200px;
	}
  #parallax_wrap, #parallax_inner {
		height: 140px;
	}
}

@media only screen
and (min-width : 768px)
and (max-width : 800px) {
	body {
		font-size: 19px;
	}
  #parallax_wrap_home, #parallax_inner_home {
		height: 280px;
	}
  #parallax_wrap, #parallax_inner {
		height: 140px;
	}
}

@media only screen
and (min-width : 800px)
and (max-width : 1024px) {
	body {
		font-size: 20px;
	}
  #parallax_wrap_home, #parallax_inner_home {
		height: 300px;
	}
  #parallax_wrap, #parallax_inner {
		height: 210px;
	}
}

